--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+
+**/.DS_Store
+
+/public/uploads/images/leathers/raw/*
+/public/uploads/images/leathers/full/*
+/public/uploads/images/leathers/feature/*
+/public/uploads/images/leathers/thumbnail/*
+/public/uploads/images/leathers/thumbnail_small/*
