--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "intervention/image": "^2.4",
         "itsgoingd/clockwork": "^2.0",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "nesbot/carbon": "^1.32"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
