--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": "^7.1.3",
         "albertcht/invisible-recaptcha": "^1.8",
         "doctrine/dbal": "^2.8",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "~4.0",
         "intervention/image": "^2.4",
         "itsgoingd/clockwork": "^2.0",
-        "laravel/framework": "5.5.*",
+        "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "nesbot/carbon": "^1.32",
         "stripe/stripe-php": "^6.17"
@@ -20,7 +20,7 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "classmap": [
