--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "7.3.*",
+        "php": "^7.3",
         "albertcht/invisible-recaptcha": "^1.8",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "~4.0",
